--- a/BayesianDNABarcodeGap.tex
+++ b/BayesianDNABarcodeGap.tex
@@ -80,7 +80,7 @@ A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ 
 
 \section{Introduction}
 
-The routine use of DNA sequences to support broad evolutionary hypotheses and \\ questions concerning demographic processes, like gene flow and speciation is now ubiquitous. Since the late 1980s, mitochondrial DNA (mtDNA) has been employed to produce a \\ distinctive and measurable pattern of genetic polymorphism in diverse and \\ spatially-distributed  taxonomic lineages such as birds, fishes, insects, and arachnids, among other extensively studied groups \citep{avise1987intraspecific}. The application of genomic data to applied fields like biodiversity forensics, conservation, and management for the molecular identification of unknown  specimen samples came later (\textit{e.g.}, Forensically Informative \\ Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} built significantly on earlier work and has emerged as a robust method of specimen identification and species discovery across myriad multicellular eukaryotes which have been sequenced at easily obtained short, standardized gene regions like the cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. 
+The routine use of DNA sequences to support broad evolutionary hypotheses and \\ questions concerning demographic processes, like gene flow and speciation, is now ubiquitous. Since the late 1980s, mitochondrial DNA (mtDNA) has been employed to produce a \\ distinctive and measurable pattern of genetic polymorphism in diverse and \\ spatially-distributed  taxonomic lineages such as birds, fishes, insects, and arachnids, among other extensively studied groups \citep{avise1987intraspecific}. The application of genomic data to applied fields like biodiversity forensics, conservation, and management for the molecular identification of unknown  specimen samples came later (\textit{e.g.}, Forensically Informative \\ Nucleotide Sequencing (FINS); \citet{bartlett1992fins}). Since its inception over 20 years ago, DNA barcoding \citep{hebert2003biological, hebert2003barcoding} built significantly on earlier work and has emerged as a robust method of specimen identification and species discovery across myriad multicellular eukaryotes which have been sequenced at easily obtained short, standardized gene regions like the cytochrome $c$ oxidase subunit I (5'-COI) mitochondrial locus for animals. 
 
 The success of the single-locus approach, particularly for regulatory and forensic \\ applications, depends crucially on two important factors: (1) the availability of high-quality specimen records found in public reference sequence databases such as the Barcode of Life Data Systems (BOLD; http://www.barcodinglife.org) \citep{ratnasingham2007bold} and GenBank (https://www.ncbi.nlm.nih.gov/genbank/), and (2) the establishment of a DNA barcode gap --- the notion that the maximum genetic distance observed within species is much smaller than the minimum degree of marker variation found among species \citep{meyer2005dna, meier2008use}. Early work has demonstrated that the presence of a DNA barcode gap hinges strongly on extant levels of species haplotype diversity gauged from comprehensive specimen sampling at wide geographic and ecological scales \citep{bergsten2012effect, candek2015dna}. Despite this, many taxonomic groups lack adequate separation in their pairwise intraspecific and interspecific genetic distances due to varying rates of evolution in both genes and taxa \citep{pentinsaari2016molecular}. Furthermore, it has been well demonstrated that the presence of a DNA barcode gap becomes less certain with increasing spatial scale of sampling since interspecific distances increase, while intraspecific distances shrink as more closely-related species are sampled \citep{phillips2022lack}. This can pose problems in cases of rare species or monotypic taxa, for instance \citep{ahrens2016rarity}.  As a result, rapid matching of unknown samples to expertly-validated references can be compromised, leading to cases of false positives (taxon oversplitting) and false negatives (excessive lumping of taxa) due to incomplete lineage sorting, interspecies \\ hybridization, genome introgression, species synonymy, cryptic species diversity, and \\ misidentifications \citep{hubert2015dna, phillips2022lack}.
 
@@ -166,7 +166,7 @@ Essentially, from a statistical perspective, the goal herein is to nonparametric
 
 The metrics encompassing $\underaccent{\bar}{\theta} $ are presumed to follow a Beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. The beta distribution has a prior mean of $\mathbb{E}[\theta] = \frac{\alpha}{\alpha + \beta}$ and a prior variance equal to $\mathbb{V}[\theta] = \frac{\alpha\beta}{(\alpha + \beta)^2(\alpha + \beta + 1)}$. In the case where $\alpha = \beta$, all generated Beta($\alpha$, $\beta$) distributions will possess the same prior expectation, whereas the prior variance will shrink as both $\alpha$ and $\beta$ increase. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed, specifically, Beta($\alpha + Y$, $\beta + n - Y$), having expectation $\mathbb{E}[\theta|Y] = \frac{\alpha + Y}{\alpha + \beta + n}$ and variance $\mathbb{V}[\theta|Y] = \frac{(\alpha + Y)(\beta + n - Y)}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$. In the context of DNA barcoding, it is important that the DNA barcode gap metrics effectively differentiate between extremes of no overlap/complete separation and complete overlap/no separation, corresponding to values of the metrics equal to 0 and 1 (equivalent to total distance counts of 0 and $n$), respectively. These extremes yield a posterior expectation of $\mathbb{E}[\theta|Y = 0] = \frac{\alpha}{\alpha + \beta + n}$ and a posterior variance of $\mathbb{V}[\theta|Y = 0] = \frac{\alpha(\beta + n)}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$ and $\mathbb{E}[\theta|Y = n] = \frac{\alpha + n}{\alpha + \beta + n}$ and $\mathbb{V}[\theta|Y = n] = \frac{(\alpha + n)\beta}{(\alpha + \beta + n)^2(\alpha + \beta + n + 1)}$. Note, the posterior variances are equivalent at these thresholds for all $\alpha$ = $\beta$.
 
-Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. This distribution has an expected value of $\mu = \frac{1}{2}$ and a variance of $\sigma^2 = \frac{1}{12}$. Further, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments such as the expected value $\mathbb{E}[\theta|Y] = \frac{Y + 1}{n + 2}$ and variance $\mathbb{V|\theta}[Y] = \frac{(Y + 1)(n - Y + 1)}{(n + 2)^2(n + 3)}$, and other quantities, can be easily calculated. Clearly, $\mathbb{E}[\theta|Y = 0] = \frac{1}{n + 2}$ and $\mathbb{V}[\theta|Y = 0] = \frac{n + 1}{(n + 2)^2(n + 3)}$, and \\ $\mathbb{E}[\theta|Y = n] = \frac{n + 1}{n + 2}$ and $\mathbb{V}[\theta|Y = n] = \frac{n + 1}{(n + 2)^2(n + 3)}$. For example, with $n$ = 2 sampled specimens for a given species (the minimum sample size possible) having no overlapping specimen records, on average, $\theta$ will be equal to $\frac{1}{4} = 0.250$, with a variance of $\frac{3}{80} \approx$ 0.0375. In contrast, with $n$ = 100 and no overlap, the mean reduces to $\frac{1}{102} \approx$ 0.001, with a variance of 9.425$\hspace{1mm} \times \hspace{1mm} 10^{-5}$. When $n$ = 2 and both taxon records overlap, the mean is $\frac{3}{4} = 0.750$, having a variance of \textit{c}. 0.0375. For $n$ = 100 where all distances overlap, $\theta$ has expectation $\frac{101}{102} \approx$ 0.990 and variance 9.425$\hspace{1mm} \times \hspace{1mm} 10^{-5}$. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. In the case of unimodal distributions, the (estimated) posterior mean often possesses the property that it readily decomposes into a convex linear combination, in the form of a weighted sum, of the (estimated) prior mean and the MLE. That is $\hat{\mu}_\mathrm{posterior} = w\hat{\mu}_\mathrm{prior} + (1-w)\hat{\mu}_\mathrm{MLE}$, where for the beta distribution, $w = \frac{\alpha + \beta}{\alpha + \beta + n}$. Therefore, with sufficient data, $w \rightarrow 0$ as $n \rightarrow \infty$, regardless of the values of $\alpha$ and $\beta$, and the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood. For the Beta(1, 1), $w = \frac{2}{2 + n}$, with $n$ = 2 giving $w = \frac{1}{2}$; that is, the posterior is the arithmetic average of the prior and the likelihood. The full Bayesian model for species $x$ is thus given by
+Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. This distribution has an expected value of $\mu = \frac{1}{2}$ and a variance of $\sigma^2 = \frac{1}{12}$. Further, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments such as the expected value $\mathbb{E}[\theta|Y] = \frac{Y + 1}{n + 2}$ and variance $\mathbb{V|\theta}[Y] = \frac{(Y + 1)(n - Y + 1)}{(n + 2)^2(n + 3)}$, and other quantities, can be easily calculated. Clearly, $\mathbb{E}[\theta|Y = 0] = \frac{1}{n + 2}$ and $\mathbb{V}[\theta|Y = 0] = \frac{n + 1}{(n + 2)^2(n + 3)}$, and \\ $\mathbb{E}[\theta|Y = n] = \frac{n + 1}{n + 2}$ and $\mathbb{V}[\theta|Y = n] = \frac{n + 1}{(n + 2)^2(n + 3)}$. For example, with $n$ = 2 sampled specimens for a given species (the minimum sample size possible) having no overlapping specimen records, on average, $\theta$ will be equal to $\mu = \frac{1}{4}$ = 0.250, with a variance of $\sigma^2 = \frac{3}{80} \approx$ 0.0375. In contrast, with $n$ = 100 and no overlap, the mean reduces to $\mu = \frac{1}{102} \approx$ 0.001, with a variance of $\sigma^2$ = 9.425$\hspace{1mm} \times \hspace{1mm} 10^{-5}$. When $n$ = 2 and both taxon records overlap, the mean is $\mu = \frac{3}{4}$ = 0.750, having a variance of $\sigma^2 \approx$ 0.0375. For $n$ = 100 where all distances overlap, $\theta$ has expectation $\mu = \frac{101}{102} \approx$ 0.990 and variance $\sigma^2 \approx$ 9.425$\hspace{1mm} \times \hspace{1mm} 10^{-5}$. These edge case examples demonstrate that the Beta(1, 1) distribution serves as a good first-pass prior for DNA barcode gap estmation using \citeauthor{phillips2024measure}'s (\citeyear{phillips2024measure}) metrics, though tighter bounds can still be achieved. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. In the case of unimodal distributions, the (estimated) posterior mean often possesses the property that it readily decomposes into a convex linear combination, in the form of a weighted sum, of the (estimated) prior mean and the MLE. That is $\hat{\mu}_\mathrm{posterior} = w\hat{\mu}_\mathrm{prior} + (1-w)\hat{\mu}_\mathrm{MLE}$, where for the beta distribution, $w = \frac{\alpha + \beta}{\alpha + \beta + n}$. Therefore, with sufficient data, $w \rightarrow 0$ as $n \rightarrow \infty$, regardless of the values of $\alpha$ and $\beta$, and the choice of prior distribution becomes less important since the posterior will be dominated by the likelihood. For the Beta(1, 1), $w = \frac{2}{2 + n}$, with $n$ = 2 giving $w = \frac{1}{2}$ = 0.500; that is, the posterior is the arithmetic average of the prior and the likelihood. For $n$ = 100, the prior weight is $w = \frac{2}{102} \approx$ 0.0196. The full Bayesian model for species $x$ is thus given by
 
 \begin{align}
 \notag y_\mathrm{lwr} &\sim \mathrm{Binomial}(N, p_\mathrm{lwr}) \\ 
@@ -259,14 +259,14 @@ Findings based on nonparametric MLEs and Bayesian posterior means were quite \\ 
 
 \end{figure}
 
-\noindent On the other hand, the situation for \textit{A. nevadensis} is more nuanced, as posterior values are further spread out (\textbf{Table 2} and \textbf{Figure 2}), suggesting less overall certainty in true parameter values given the low specimen sampling coverage for this taxon. Of note, calculated SEs and SDs are large, with the 95\% CIs and 95\% CrIs being quite wide in most cases, consistent with much uncertainty regarding the computed frequentist and Bayesian posterior means of the DNA barcode gap metrics. For instance, the Bayesian analysis suggests that the data are consistent with both $p_{\mathrm{lwr}}$ and $p^{'}_{\mathrm{lwr}}$ ranging from \\ approximately 0.500-1.000 due to the large SD of about 0.140. The posterior means associated with these estimates themselves are also far from one. The CrI for $p_{\mathrm{upr}}$ and $p^{'}_{\mathrm{upr}}$ also spans an order of magnitude. Further, regarding the frequentist analysis for the same species, the 95\% CI for $q_x$ is quite wide, reflecting considerable uncertainty in its true parameter value. Similarly, that for $q^{'}_x$ extends to negative values at the left endpoint, due to the corresponding SE of 0.070 being too high as a result of the extremely low sample size of $n$ = 2 individuals sampled (\textbf{Table 2}). Since the 95\% CI for $q^{'}_x$ truncated at the lower endpoint includes the value of zero, the null hypothesis for the presence of a DNA barcode gap cannot be rejected. Despite this, it is worth noting that truncation is not standard statistical practice and will likely lead to an interval with less than 95\% nominal coverage. In such cases, more appropriate confidence interval methods like the Wilson score interval, the exact (Clopper-Pearson) interval, or the Agresti-Coull interval should be employed \citep{newcombe1998confidence, agresti1998approximate}. KDEs for \textit{A. bipustulatus} are strongly left (negatively) skewed (\textbf{Figure 2}), whereas those for \textit{A. nevadensis} exhibit more symmetry, especially for $p_{\mathrm{upr}}$ and $p^{'}_{\mathrm{upr}}$ (\textbf{Figure 2}). These differences are likely due to the stark contrast in sample sizes for the two examined species. Nevertheless, simulated counts of overlapping specimen records from the posterior predictive distribution (\textbf{Supplementary Table 1}) were found to be very close to observed counts for both species, indicating that the proposed model adequately captures underlying variation. Obtained results suggest that use of the Beta(1, 1) prior may not be appropriate given a low number of collected individuals for most taxa in DNA barcoding efforts. This suggests that further consideration of more informative beta priors is worthwhile. This is clear for \textit{A. nevadensis}, where use of a stronger prior will likely eliminate the issue regarding accurate estimation of $p_{\mathrm{lwr}}$ and $p^{'}_{\mathrm{lwr}}$ and stabilize their uncertainty.
+\noindent On the other hand, the situation for \textit{A. nevadensis} is more nuanced, as posterior values are further spread out (\textbf{Table 2} and \textbf{Figure 2}), suggesting less overall certainty in true parameter values given the low specimen sampling coverage for this taxon. Of note, calculated SEs and SDs are large, with the 95\% CIs and 95\% CrIs being quite wide in most cases, consistent with much uncertainty regarding the computed frequentist and Bayesian posterior means of the DNA barcode gap metrics. For instance, the Bayesian analysis suggests that the data are consistent with both $p_{\mathrm{lwr}}$ and $p^{'}_{\mathrm{lwr}}$ ranging from approximately 0.500-1.000 due to the large SD of about 0.140. The posterior means associated with these estimates themselves are also far from one. The CrI for $p_{\mathrm{upr}}$ and $p^{'}_{\mathrm{upr}}$ also spans an order of magnitude. Further, regarding the frequentist analysis for the same species, the 95\% CI for $q_x$ is quite wide, reflecting considerable uncertainty in its true parameter value. Similarly, that for $q^{'}_x$ extends to negative values at the left endpoint, due to the corresponding SE of 0.070 being too high as a result of the extremely low sample size of $n$ = 2 individuals sampled (\textbf{Table 2}). Since the 95\% CI for $q^{'}_x$ truncated at the lower endpoint includes the value of zero, the null hypothesis for the presence of a DNA barcode gap cannot be rejected. Despite this, it is worth noting that truncation is not standard statistical practice and will likely lead to an interval with less than 95\% nominal coverage. In such cases, more appropriate confidence interval methods like the Wilson score interval, the exact (Clopper-Pearson) interval, or the Agresti-Coull interval should be employed \citep{newcombe1998confidence, agresti1998approximate}. KDEs for \textit{A. bipustulatus} are strongly left (negatively) skewed (\textbf{Figure 2}), whereas those for \textit{A. nevadensis} exhibit more symmetry, especially for $p_{\mathrm{upr}}$ and $p^{'}_{\mathrm{upr}}$ (\textbf{Figure 2}). These differences are likely due to the stark contrast in sample sizes for the two examined species. Nevertheless, simulated counts of overlapping specimen records from the posterior predictive distribution (\textbf{Supplementary Table 1}) were found to be very close to observed counts for both species, indicating that the proposed model adequately captures underlying variation. Obtained results suggest that use of the Beta(1, 1) prior may not be appropriate given a low number of collected individuals for most taxa in DNA barcoding efforts. This suggests that further consideration of more informative beta priors is worthwhile. This is clear for \textit{A. nevadensis}, where use of a stronger prior will likely eliminate the issue regarding accurate estimation of $p_{\mathrm{lwr}}$ and $p^{'}_{\mathrm{lwr}}$ and stabilize their uncertainty.
 
 \section{Conclusion}
 
 Herein, the accuracy of the DNA barcode gap was analyzed from a rigorous statistical lens to expedite both the curation and growth of reference sequence libraries, ensuring they are populated with high quality, statistically defensible specimen records fit for purpose to address standing questions in ecology, evolutionary biology, management, and conservation. To accomplish this, recently proposed, easy to calculate nonparametric MLEs were formally derived using ECDFs and applied to assess the extent of overlap/separation of distance distributions within and among two species of predatory water beetles in the genus \textit{Agabus} sequenced at CYTB using a Bayesian binomial count model with conjugate beta priors. Findings highlight a high level of parameter uncertainty for \textit{A. nevadensis}, whereas posterior estimates of the DNA barcode gap metrics for \textit{A. bipustulatus} are much more certain. Based on these results, it is imperative that specimen sampling be prioritized to better reflect actual species boundaries. More generally, apart from the metrics being employed to better highlighting the importance of within-species genetic diversity versus between-species divergence, it is expected that the approach developed herein will be of broad utility in applied fields, such as DNA-based detection of seafood fraud within global supply chains, and in the determination of species occupancy/detection probabilities at ecological sites of interest using active and passive environmental DNA (eDNA) methods such as metabarcoding.
 
 Since the DNA barcode gap metrics often attain values very close to zero (suggesting no overlap and complete separation of distance distributions) and/or very near one (indicating no separation and complete overlap), in addition to more intermediate values, a noninformative Beta($\frac{1}{2}, \frac{1}{2}$) prior may be more appropriate over complete ignorance imposed by a Beta(1, 1) prior. The former distribution is U-shaped symmetric and places greater probability density at the extremes of the distribution due to its heavier tails, while still allowing for variability in parameter estimates within intermediate values along its domain. Note that this prior is Jeffreys' prior density \citep{jeffreys1946invariant}, which is  proportional to the square root of the Fisher information $\mathcal{I}(\theta)$; that is,
-$\pi(\theta) \propto \theta^{-\frac{1}{2}}(1-\theta)^{-\frac{1}{2}}$. Jeffreys' prior has several desirable statistical  properties as a prior: that it is inversely proportional to the standard deviation of the binomial distribution, and most notably, that it is invariant to model reparameterization \citep{gelman2014bayesian}. However, this prior can lead to divergent transitions, among other pathologies, imposed by complex geometry (\textit{i.e.}, curvature) in the posterior space since many iterative stochastic MCMC sampling algorithms experience difficulties when exploring high density distribution regions. Thus, remedies to resolve them, such as lowering the step size of the HMC/NUTS sampler, should be attempted in future work, along with other approaches such as empirical Bayes estimation to approximate beta prior hyperparameters from observed data through the MLE or other methods of parameter estimation, such as the method of moments. Alternatively, hierarchical modelling could be employed to estimate separate distribution model hyperparameters for each species and/or compute distinct estimates for the directionality/comparison level of the DNA barcode gap metrics (\textit{i.e.,} lower \textit{vs.} upper, non-prime \textit{vs.} prime) separately within the genus under study. This would permit greater flexibility through incorporating more fine-grained structure seen in the data; however, low taxon sample sizes may preclude valid inferences to be reasonably ascertained due to the large number additional parameters which would be introduced through the specification of the hyperprior distributions. Methods outlined in \citet{gelman2014bayesian}, such as dealing with non-exchangeability of observations and alternate model parameterizations like the logit, may prove useful in this regard.  Even though more work remains, it is clear that both frequentist and Bayesian inference hold much promise for the future of molecular biodiversity science.
+$\pi(\theta) \propto \theta^{-\frac{1}{2}}(1-\theta)^{-\frac{1}{2}}$. Jeffreys' prior has several desirable statistical  properties as a prior: that it is inversely proportional to the standard deviation of the binomial distribution, and most notably, that it is invariant to model reparameterization \citep{gelman2014bayesian}. However, this prior can lead to divergent transitions, among other pathologies, imposed by complex geometry (\textit{i.e.}, curvature) in the posterior space since many iterative stochastic MCMC sampling algorithms experience difficulties when exploring high density distribution regions. Thus, remedies to resolve them, such as lowering the step size of the HMC/NUTS sampler, should be attempted in future work, along with other approaches such as empirical Bayes estimation to approximate beta prior hyperparameters from observed data through the MLE or other methods of parameter estimation, such as the method of moments. Alternatively, hierarchical modelling could be employed to estimate separate distribution model hyperparameters for each species and/or compute distinct estimates for the directionality/comparison level of the DNA barcode gap metrics (\textit{i.e.,} lower \textit{vs.} upper, non-prime \textit{vs.} prime) separately within the genus under study. This would permit greater flexibility through incorporating more fine-grained structure seen in the data; however, low taxon sample sizes may preclude valid inferences to be reasonably ascertained due to the large number additional parameters which would be introduced through the specification of the hyperprior distributions. Methods outlined in \citet{gelman2014bayesian}, such as dealing with non-exchangeability of observations and alternate model parameterizations like the logit, may prove useful in this regard. Perhaps, the best course of action though is the elicitation of priors from domain experts. Even though more work remains, it is clear that both frequentist and Bayesian inference hold much promise for the future of molecular biodiversity science.
 
 
 \newpage
